parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> class
Rule 1     class -> CLASS className LCURLY classVarDecs subroutineDecs RCURLY
Rule 2     classVarDecs -> STATIC type varName commaVarNames SEMICOLON classVarDecs
Rule 3     classVarDecs -> FIELD type varName commaVarNames SEMICOLON classVarDecs
Rule 4     classVarDecs -> empty
Rule 5     type -> INT
Rule 6     type -> CHAR
Rule 7     type -> BOOLEAN
Rule 8     type -> className
Rule 9     subroutineDecs -> CONSTRUCTOR VOID subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
Rule 10    subroutineDecs -> CONSTRUCTOR type subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
Rule 11    subroutineDecs -> FUNCTION VOID subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
Rule 12    subroutineDecs -> FUNCTION type subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
Rule 13    subroutineDecs -> METHOD VOID subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
Rule 14    subroutineDecs -> METHOD type subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
Rule 15    subroutineDecs -> empty
Rule 16    parameterList -> type varName additionalParameters
Rule 17    parameterList -> empty
Rule 18    additionalParameters -> COMMA type varName additionalParameters
Rule 19    additionalParameters -> empty
Rule 20    subroutineBody -> LCURLY varDecs statements RCURLY
Rule 21    varDecs -> VAR type varName commaVarNames SEMICOLON varDecs
Rule 22    varDecs -> empty
Rule 23    commaVarNames -> COMMA varName commaVarNames
Rule 24    commaVarNames -> empty
Rule 25    className -> IDENTIFIER
Rule 26    subroutineName -> IDENTIFIER
Rule 27    varName -> IDENTIFIER
Rule 28    statements -> statement statements
Rule 29    statements -> empty
Rule 30    statement -> letStatement
Rule 31    statement -> ifStatement
Rule 32    statement -> whileStatement
Rule 33    statement -> doStatement
Rule 34    statement -> returnStatement
Rule 35    letStatement -> LET varName EQ expression SEMICOLON
Rule 36    letStatement -> LET varName LSQUARE expression RSQUARE EQ expression SEMICOLON
Rule 37    ifStatement -> IF LPAREN expression RPAREN LCURLY statements RCURLY
Rule 38    ifStatement -> IF LPAREN expression RPAREN LCURLY statements RCURLY ELSE LCURLY statements RCURLY
Rule 39    whileStatement -> WHILE LPAREN expression RPAREN LCURLY statements RCURLY
Rule 40    doStatement -> DO subroutineCall SEMICOLON
Rule 41    returnStatement -> RETURN SEMICOLON
Rule 42    returnStatement -> RETURN expression SEMICOLON
Rule 43    expression -> term opTerms
Rule 44    opTerms -> op term opTerms
Rule 45    opTerms -> empty
Rule 46    term -> INT_CONST
Rule 47    term -> LPAREN expression RPAREN
Rule 48    term -> STRING_CONST
Rule 49    term -> keywordConstant
Rule 50    term -> varName
Rule 51    term -> varName LSQUARE expression RSQUARE
Rule 52    term -> subroutineCall
Rule 53    term -> unaryOp term
Rule 54    subroutineCall -> subroutineName LPAREN expressionList RPAREN
Rule 55    subroutineCall -> className DOT subroutineName LPAREN expressionList RPAREN
Rule 56    subroutineCall -> varName DOT subroutineName LPAREN expressionList RPAREN
Rule 57    expressionList -> expression commaExpressions
Rule 58    expressionList -> empty
Rule 59    commaExpressions -> COMMA expression commaExpressions
Rule 60    commaExpressions -> empty
Rule 61    op -> PLUS
Rule 62    op -> MINUS
Rule 63    op -> TIMES
Rule 64    op -> DIVIDE
Rule 65    op -> AMP
Rule 66    op -> PIPE
Rule 67    op -> LT
Rule 68    op -> GT
Rule 69    op -> EQ
Rule 70    unaryOp -> MINUS
Rule 71    unaryOp -> TILDE
Rule 72    keywordConstant -> TRUE
Rule 73    keywordConstant -> FALSE
Rule 74    keywordConstant -> NULL
Rule 75    keywordConstant -> THIS
Rule 76    empty -> <empty>

Terminals, with rules where they appear

AMP                  : 65
BOOLEAN              : 7
CHAR                 : 6
CLASS                : 1
COMMA                : 18 23 59
CONSTRUCTOR          : 9 10
DIVIDE               : 64
DO                   : 40
DOT                  : 55 56
ELSE                 : 38
EQ                   : 35 36 69
FALSE                : 73
FIELD                : 3
FUNCTION             : 11 12
GT                   : 68
IDENTIFIER           : 25 26 27
IF                   : 37 38
INT                  : 5
INT_CONST            : 46
LCURLY               : 1 20 37 38 38 39
LET                  : 35 36
LPAREN               : 9 10 11 12 13 14 37 38 39 47 54 55 56
LSQUARE              : 36 51
LT                   : 67
METHOD               : 13 14
MINUS                : 62 70
NULL                 : 74
PIPE                 : 66
PLUS                 : 61
RCURLY               : 1 20 37 38 38 39
RETURN               : 41 42
RPAREN               : 9 10 11 12 13 14 37 38 39 47 54 55 56
RSQUARE              : 36 51
SEMICOLON            : 2 3 21 35 36 40 41 42
STATIC               : 2
STRING_CONST         : 48
THIS                 : 75
TILDE                : 71
TIMES                : 63
TRUE                 : 72
VAR                  : 21
VOID                 : 9 11 13
WHILE                : 39
error                : 

Nonterminals, with rules where they appear

additionalParameters : 16 18
class                : 0
className            : 1 8 55
classVarDecs         : 1 2 3
commaExpressions     : 57 59
commaVarNames        : 2 3 21 23
doStatement          : 33
empty                : 4 15 17 19 22 24 29 45 58 60
expression           : 35 36 36 37 38 39 42 47 51 57 59
expressionList       : 54 55 56
ifStatement          : 31
keywordConstant      : 49
letStatement         : 30
op                   : 44
opTerms              : 43 44
parameterList        : 9 10 11 12 13 14
returnStatement      : 34
statement            : 28
statements           : 20 28 37 38 38 39
subroutineBody       : 9 10 11 12 13 14
subroutineCall       : 40 52
subroutineDecs       : 1 9 10 11 12 13 14
subroutineName       : 9 10 11 12 13 14 54 55 56
term                 : 43 44 53
type                 : 2 3 10 12 14 16 18 21
unaryOp              : 53
varDecs              : 20 21
varName              : 2 3 16 18 21 23 35 36 50 51 56
whileStatement       : 32

Parsing method: LALR

state 0

    (0) S' -> . class
    (1) class -> . CLASS className LCURLY classVarDecs subroutineDecs RCURLY

    CLASS           shift and go to state 1

    class                          shift and go to state 2

state 1

    (1) class -> CLASS . className LCURLY classVarDecs subroutineDecs RCURLY
    (25) className -> . IDENTIFIER

    IDENTIFIER      shift and go to state 4

    className                      shift and go to state 3

state 2

    (0) S' -> class .



state 3

    (1) class -> CLASS className . LCURLY classVarDecs subroutineDecs RCURLY

    LCURLY          shift and go to state 5


state 4

    (25) className -> IDENTIFIER .

    IDENTIFIER      reduce using rule 25 (className -> IDENTIFIER .)
    LCURLY          reduce using rule 25 (className -> IDENTIFIER .)


state 5

    (1) class -> CLASS className LCURLY . classVarDecs subroutineDecs RCURLY
    (2) classVarDecs -> . STATIC type varName commaVarNames SEMICOLON classVarDecs
    (3) classVarDecs -> . FIELD type varName commaVarNames SEMICOLON classVarDecs
    (4) classVarDecs -> . empty
    (76) empty -> .

    STATIC          shift and go to state 8
    FIELD           shift and go to state 7
    CONSTRUCTOR     reduce using rule 76 (empty -> .)
    FUNCTION        reduce using rule 76 (empty -> .)
    METHOD          reduce using rule 76 (empty -> .)
    RCURLY          reduce using rule 76 (empty -> .)

    classVarDecs                   shift and go to state 6
    empty                          shift and go to state 9

state 6

    (1) class -> CLASS className LCURLY classVarDecs . subroutineDecs RCURLY
    (9) subroutineDecs -> . CONSTRUCTOR VOID subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
    (10) subroutineDecs -> . CONSTRUCTOR type subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
    (11) subroutineDecs -> . FUNCTION VOID subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
    (12) subroutineDecs -> . FUNCTION type subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
    (13) subroutineDecs -> . METHOD VOID subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
    (14) subroutineDecs -> . METHOD type subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
    (15) subroutineDecs -> . empty
    (76) empty -> .

    CONSTRUCTOR     shift and go to state 11
    FUNCTION        shift and go to state 10
    METHOD          shift and go to state 12
    RCURLY          reduce using rule 76 (empty -> .)

    subroutineDecs                 shift and go to state 13
    empty                          shift and go to state 14

state 7

    (3) classVarDecs -> FIELD . type varName commaVarNames SEMICOLON classVarDecs
    (5) type -> . INT
    (6) type -> . CHAR
    (7) type -> . BOOLEAN
    (8) type -> . className
    (25) className -> . IDENTIFIER

    INT             shift and go to state 16
    CHAR            shift and go to state 15
    BOOLEAN         shift and go to state 17
    IDENTIFIER      shift and go to state 4

    className                      shift and go to state 18
    type                           shift and go to state 19

state 8

    (2) classVarDecs -> STATIC . type varName commaVarNames SEMICOLON classVarDecs
    (5) type -> . INT
    (6) type -> . CHAR
    (7) type -> . BOOLEAN
    (8) type -> . className
    (25) className -> . IDENTIFIER

    INT             shift and go to state 16
    CHAR            shift and go to state 15
    BOOLEAN         shift and go to state 17
    IDENTIFIER      shift and go to state 4

    className                      shift and go to state 18
    type                           shift and go to state 20

state 9

    (4) classVarDecs -> empty .

    CONSTRUCTOR     reduce using rule 4 (classVarDecs -> empty .)
    FUNCTION        reduce using rule 4 (classVarDecs -> empty .)
    METHOD          reduce using rule 4 (classVarDecs -> empty .)
    RCURLY          reduce using rule 4 (classVarDecs -> empty .)


state 10

    (11) subroutineDecs -> FUNCTION . VOID subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
    (12) subroutineDecs -> FUNCTION . type subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
    (5) type -> . INT
    (6) type -> . CHAR
    (7) type -> . BOOLEAN
    (8) type -> . className
    (25) className -> . IDENTIFIER

    VOID            shift and go to state 21
    INT             shift and go to state 16
    CHAR            shift and go to state 15
    BOOLEAN         shift and go to state 17
    IDENTIFIER      shift and go to state 4

    className                      shift and go to state 18
    type                           shift and go to state 22

state 11

    (9) subroutineDecs -> CONSTRUCTOR . VOID subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
    (10) subroutineDecs -> CONSTRUCTOR . type subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
    (5) type -> . INT
    (6) type -> . CHAR
    (7) type -> . BOOLEAN
    (8) type -> . className
    (25) className -> . IDENTIFIER

    VOID            shift and go to state 23
    INT             shift and go to state 16
    CHAR            shift and go to state 15
    BOOLEAN         shift and go to state 17
    IDENTIFIER      shift and go to state 4

    className                      shift and go to state 18
    type                           shift and go to state 24

state 12

    (13) subroutineDecs -> METHOD . VOID subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
    (14) subroutineDecs -> METHOD . type subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
    (5) type -> . INT
    (6) type -> . CHAR
    (7) type -> . BOOLEAN
    (8) type -> . className
    (25) className -> . IDENTIFIER

    VOID            shift and go to state 25
    INT             shift and go to state 16
    CHAR            shift and go to state 15
    BOOLEAN         shift and go to state 17
    IDENTIFIER      shift and go to state 4

    className                      shift and go to state 18
    type                           shift and go to state 26

state 13

    (1) class -> CLASS className LCURLY classVarDecs subroutineDecs . RCURLY

    RCURLY          shift and go to state 27


state 14

    (15) subroutineDecs -> empty .

    RCURLY          reduce using rule 15 (subroutineDecs -> empty .)


state 15

    (6) type -> CHAR .

    IDENTIFIER      reduce using rule 6 (type -> CHAR .)


state 16

    (5) type -> INT .

    IDENTIFIER      reduce using rule 5 (type -> INT .)


state 17

    (7) type -> BOOLEAN .

    IDENTIFIER      reduce using rule 7 (type -> BOOLEAN .)


state 18

    (8) type -> className .

    IDENTIFIER      reduce using rule 8 (type -> className .)


state 19

    (3) classVarDecs -> FIELD type . varName commaVarNames SEMICOLON classVarDecs
    (27) varName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 29

    varName                        shift and go to state 28

state 20

    (2) classVarDecs -> STATIC type . varName commaVarNames SEMICOLON classVarDecs
    (27) varName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 29

    varName                        shift and go to state 30

state 21

    (11) subroutineDecs -> FUNCTION VOID . subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
    (26) subroutineName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 32

    subroutineName                 shift and go to state 31

state 22

    (12) subroutineDecs -> FUNCTION type . subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
    (26) subroutineName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 32

    subroutineName                 shift and go to state 33

state 23

    (9) subroutineDecs -> CONSTRUCTOR VOID . subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
    (26) subroutineName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 32

    subroutineName                 shift and go to state 34

state 24

    (10) subroutineDecs -> CONSTRUCTOR type . subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
    (26) subroutineName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 32

    subroutineName                 shift and go to state 35

state 25

    (13) subroutineDecs -> METHOD VOID . subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
    (26) subroutineName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 32

    subroutineName                 shift and go to state 36

state 26

    (14) subroutineDecs -> METHOD type . subroutineName LPAREN parameterList RPAREN subroutineBody subroutineDecs
    (26) subroutineName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 32

    subroutineName                 shift and go to state 37

state 27

    (1) class -> CLASS className LCURLY classVarDecs subroutineDecs RCURLY .

    $end            reduce using rule 1 (class -> CLASS className LCURLY classVarDecs subroutineDecs RCURLY .)


state 28

    (3) classVarDecs -> FIELD type varName . commaVarNames SEMICOLON classVarDecs
    (23) commaVarNames -> . COMMA varName commaVarNames
    (24) commaVarNames -> . empty
    (76) empty -> .

    COMMA           shift and go to state 38
    SEMICOLON       reduce using rule 76 (empty -> .)

    commaVarNames                  shift and go to state 39
    empty                          shift and go to state 40

state 29

    (27) varName -> IDENTIFIER .

    EQ              reduce using rule 27 (varName -> IDENTIFIER .)
    LSQUARE         reduce using rule 27 (varName -> IDENTIFIER .)
    COMMA           reduce using rule 27 (varName -> IDENTIFIER .)
    SEMICOLON       reduce using rule 27 (varName -> IDENTIFIER .)
    RPAREN          reduce using rule 27 (varName -> IDENTIFIER .)


state 30

    (2) classVarDecs -> STATIC type varName . commaVarNames SEMICOLON classVarDecs
    (23) commaVarNames -> . COMMA varName commaVarNames
    (24) commaVarNames -> . empty
    (76) empty -> .

    COMMA           shift and go to state 38
    SEMICOLON       reduce using rule 76 (empty -> .)

    commaVarNames                  shift and go to state 41
    empty                          shift and go to state 40

state 31

    (11) subroutineDecs -> FUNCTION VOID subroutineName . LPAREN parameterList RPAREN subroutineBody subroutineDecs

    LPAREN          shift and go to state 42


state 32

    (26) subroutineName -> IDENTIFIER .

    LPAREN          reduce using rule 26 (subroutineName -> IDENTIFIER .)


state 33

    (12) subroutineDecs -> FUNCTION type subroutineName . LPAREN parameterList RPAREN subroutineBody subroutineDecs

    LPAREN          shift and go to state 43


state 34

    (9) subroutineDecs -> CONSTRUCTOR VOID subroutineName . LPAREN parameterList RPAREN subroutineBody subroutineDecs

    LPAREN          shift and go to state 44


state 35

    (10) subroutineDecs -> CONSTRUCTOR type subroutineName . LPAREN parameterList RPAREN subroutineBody subroutineDecs

    LPAREN          shift and go to state 45


state 36

    (13) subroutineDecs -> METHOD VOID subroutineName . LPAREN parameterList RPAREN subroutineBody subroutineDecs

    LPAREN          shift and go to state 46


state 37

    (14) subroutineDecs -> METHOD type subroutineName . LPAREN parameterList RPAREN subroutineBody subroutineDecs

    LPAREN          shift and go to state 47


state 38

    (23) commaVarNames -> COMMA . varName commaVarNames
    (27) varName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 29

    varName                        shift and go to state 48

state 39

    (3) classVarDecs -> FIELD type varName commaVarNames . SEMICOLON classVarDecs

    SEMICOLON       shift and go to state 49


state 40

    (24) commaVarNames -> empty .

    SEMICOLON       reduce using rule 24 (commaVarNames -> empty .)


state 41

    (2) classVarDecs -> STATIC type varName commaVarNames . SEMICOLON classVarDecs

    SEMICOLON       shift and go to state 50


state 42

    (11) subroutineDecs -> FUNCTION VOID subroutineName LPAREN . parameterList RPAREN subroutineBody subroutineDecs
    (16) parameterList -> . type varName additionalParameters
    (17) parameterList -> . empty
    (5) type -> . INT
    (6) type -> . CHAR
    (7) type -> . BOOLEAN
    (8) type -> . className
    (76) empty -> .
    (25) className -> . IDENTIFIER

    INT             shift and go to state 16
    CHAR            shift and go to state 15
    BOOLEAN         shift and go to state 17
    RPAREN          reduce using rule 76 (empty -> .)
    IDENTIFIER      shift and go to state 4

    className                      shift and go to state 18
    parameterList                  shift and go to state 51
    type                           shift and go to state 52
    empty                          shift and go to state 53

state 43

    (12) subroutineDecs -> FUNCTION type subroutineName LPAREN . parameterList RPAREN subroutineBody subroutineDecs
    (16) parameterList -> . type varName additionalParameters
    (17) parameterList -> . empty
    (5) type -> . INT
    (6) type -> . CHAR
    (7) type -> . BOOLEAN
    (8) type -> . className
    (76) empty -> .
    (25) className -> . IDENTIFIER

    INT             shift and go to state 16
    CHAR            shift and go to state 15
    BOOLEAN         shift and go to state 17
    RPAREN          reduce using rule 76 (empty -> .)
    IDENTIFIER      shift and go to state 4

    className                      shift and go to state 18
    parameterList                  shift and go to state 54
    type                           shift and go to state 52
    empty                          shift and go to state 53

state 44

    (9) subroutineDecs -> CONSTRUCTOR VOID subroutineName LPAREN . parameterList RPAREN subroutineBody subroutineDecs
    (16) parameterList -> . type varName additionalParameters
    (17) parameterList -> . empty
    (5) type -> . INT
    (6) type -> . CHAR
    (7) type -> . BOOLEAN
    (8) type -> . className
    (76) empty -> .
    (25) className -> . IDENTIFIER

    INT             shift and go to state 16
    CHAR            shift and go to state 15
    BOOLEAN         shift and go to state 17
    RPAREN          reduce using rule 76 (empty -> .)
    IDENTIFIER      shift and go to state 4

    className                      shift and go to state 18
    parameterList                  shift and go to state 55
    type                           shift and go to state 52
    empty                          shift and go to state 53

state 45

    (10) subroutineDecs -> CONSTRUCTOR type subroutineName LPAREN . parameterList RPAREN subroutineBody subroutineDecs
    (16) parameterList -> . type varName additionalParameters
    (17) parameterList -> . empty
    (5) type -> . INT
    (6) type -> . CHAR
    (7) type -> . BOOLEAN
    (8) type -> . className
    (76) empty -> .
    (25) className -> . IDENTIFIER

    INT             shift and go to state 16
    CHAR            shift and go to state 15
    BOOLEAN         shift and go to state 17
    RPAREN          reduce using rule 76 (empty -> .)
    IDENTIFIER      shift and go to state 4

    className                      shift and go to state 18
    parameterList                  shift and go to state 56
    type                           shift and go to state 52
    empty                          shift and go to state 53

state 46

    (13) subroutineDecs -> METHOD VOID subroutineName LPAREN . parameterList RPAREN subroutineBody subroutineDecs
    (16) parameterList -> . type varName additionalParameters
    (17) parameterList -> . empty
    (5) type -> . INT
    (6) type -> . CHAR
    (7) type -> . BOOLEAN
    (8) type -> . className
    (76) empty -> .
    (25) className -> . IDENTIFIER

    INT             shift and go to state 16
    CHAR            shift and go to state 15
    BOOLEAN         shift and go to state 17
    RPAREN          reduce using rule 76 (empty -> .)
    IDENTIFIER      shift and go to state 4

    className                      shift and go to state 18
    parameterList                  shift and go to state 57
    type                           shift and go to state 52
    empty                          shift and go to state 53

state 47

    (14) subroutineDecs -> METHOD type subroutineName LPAREN . parameterList RPAREN subroutineBody subroutineDecs
    (16) parameterList -> . type varName additionalParameters
    (17) parameterList -> . empty
    (5) type -> . INT
    (6) type -> . CHAR
    (7) type -> . BOOLEAN
    (8) type -> . className
    (76) empty -> .
    (25) className -> . IDENTIFIER

    INT             shift and go to state 16
    CHAR            shift and go to state 15
    BOOLEAN         shift and go to state 17
    RPAREN          reduce using rule 76 (empty -> .)
    IDENTIFIER      shift and go to state 4

    className                      shift and go to state 18
    parameterList                  shift and go to state 58
    type                           shift and go to state 52
    empty                          shift and go to state 53

state 48

    (23) commaVarNames -> COMMA varName . commaVarNames
    (23) commaVarNames -> . COMMA varName commaVarNames
    (24) commaVarNames -> . empty
    (76) empty -> .

    COMMA           shift and go to state 38
    SEMICOLON       reduce using rule 76 (empty -> .)

    commaVarNames                  shift and go to state 59
    empty                          shift and go to state 40

state 49

    (3) classVarDecs -> FIELD type varName commaVarNames SEMICOLON . classVarDecs
    (2) classVarDecs -> . STATIC type varName commaVarNames SEMICOLON classVarDecs
    (3) classVarDecs -> . FIELD type varName commaVarNames SEMICOLON classVarDecs
    (4) classVarDecs -> . empty
    (76) empty -> .

    STATIC          shift and go to state 8
    FIELD           shift and go to state 7
    CONSTRUCTOR     reduce using rule 76 (empty -> .)
    FUNCTION        reduce using rule 76 (empty -> .)
    METHOD          reduce using rule 76 (empty -> .)
    RCURLY          reduce using rule 76 (empty -> .)

    classVarDecs                   shift and go to state 60
    empty                          shift and go to state 9

state 50

    (2) classVarDecs -> STATIC type varName commaVarNames SEMICOLON . classVarDecs
    (2) classVarDecs -> . STATIC type varName commaVarNames SEMICOLON classVarDecs
    (3) classVarDecs -> . FIELD type varName commaVarNames SEMICOLON classVarDecs
    (4) classVarDecs -> . empty
    (76) empty -> .

    STATIC          shift and go to state 8
    FIELD           shift and go to state 7
    CONSTRUCTOR     reduce using rule 76 (empty -> .)
    FUNCTION        reduce using rule 76 (empty -> .)
    METHOD          reduce using rule 76 (empty -> .)
    RCURLY          reduce using rule 76 (empty -> .)

    classVarDecs                   shift and go to state 61
    empty                          shift and go to state 9

state 51

    (11) subroutineDecs -> FUNCTION VOID subroutineName LPAREN parameterList . RPAREN subroutineBody subroutineDecs

    RPAREN          shift and go to state 62


state 52

    (16) parameterList -> type . varName additionalParameters
    (27) varName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 29

    varName                        shift and go to state 63

state 53

    (17) parameterList -> empty .

    RPAREN          reduce using rule 17 (parameterList -> empty .)


state 54

    (12) subroutineDecs -> FUNCTION type subroutineName LPAREN parameterList . RPAREN subroutineBody subroutineDecs

    RPAREN          shift and go to state 64


state 55

    (9) subroutineDecs -> CONSTRUCTOR VOID subroutineName LPAREN parameterList . RPAREN subroutineBody subroutineDecs

    RPAREN          shift and go to state 65


state 56

    (10) subroutineDecs -> CONSTRUCTOR type subroutineName LPAREN parameterList . RPAREN subroutineBody subroutineDecs

    RPAREN          shift and go to state 66


state 57

    (13) subroutineDecs -> METHOD VOID subroutineName LPAREN parameterList . RPAREN subroutineBody subroutineDecs

    RPAREN          shift and go to state 67


state 58

    (14) subroutineDecs -> METHOD type subroutineName LPAREN parameterList . RPAREN subroutineBody subroutineDecs

    RPAREN          shift and go to state 68


state 59

    (23) commaVarNames -> COMMA varName commaVarNames .

    SEMICOLON       reduce using rule 23 (commaVarNames -> COMMA varName commaVarNames .)

